--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,104 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <title>Mon site personnel</title>
+    <link rel="stylesheet" href="https://bootswatch.com/5/materia/bootstrap.rtl.min.css">
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Votre Nom</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Accueil</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#about-me">À propos de moi</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#cv">CV</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#portfolio">Portfolio</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="container mt-5">
+        <h1>Bienvenue sur mon site personnel!</h1>
+        <p>Je suis Votre Nom et je suis étudiant(e) en Réseaux et Télécommunications.</p>
+        <p>Je suis passionné par les technologies de l'information et j'aime relever de nouveaux défis.</p>
+        <button class="btn btn-primary" data-toggle="modal" data-target="#myModal">Pour en savoir plus</button>
+    </div>
+
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title" id="myModalLabel">En savoir plus sur moi</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                </div>
+                <div class="modal-body">
+                    <p>Je suis Votre Nom et je suis étudiant(e) en Réseaux et Télécommunications.</p>
+                    <p>Je suis passionné par les technologies de l'information et j'aime relever de nouveaux défis.</p>
+                    <p>Voici quelques photos de moi en train de faire ce que j'aime:</p>
+                    <img src="image1.png" alt="Photo 1">
+                    <img src="photo2.jpg" alt="Photo 2">
+                    <img src="photo3.jpg" alt="Photo 3">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container mt-5" id="cv">
+        <h2>L'intitulé du poste Réseaux et Télécommunications de mes rêves</h2>
+        <h3>Formations</h3>
+        <ul>
+            <li>[Nom de la formation] - [Date de début] à [Date de fin]</li>
+            <li>[Nom de la formation] - [Date de début] à [Date de fin]</li>
+        </ul>
+        <h3>Expériences professionnelles</h3>
+        <ul>
+            <li>[Nom de l'entreprise] - [Date de début] à [Date de fin]</li>
+            <li>[Nom de l'entreprise] - [Date de début] à [Date de fin]</li>
+        </ul>
+        <h3>Compétences</h3>
+        <ul>
+            <li>[Compétence 1]</li>
+            <li>[Compétence 2]</li>
+            <li>[Compétence 3]</li>
+        </ul>
+    </div>
+
+    <div class="container mt-5" id="portfolio">
+        <h2>Mon portfolio de compétences</h2>
+        <p>Voici quelques exemples de projets sur lesquels j'ai travaillé:</p>
+        <ul>
+            <li><a href="#">Projet 1</a></li>
+            <li><a href="#">Projet 2</a></li>
+            <li><a href="#">Projet 3</a></li>
+        </ul>
+    </div>
+
+    <footer class="bg-light py-3">
+        <div class="container">
+            <p class="text-center">&copy; <?php echo date("Y"); ?> Votre Nom. Tous droits réservés.</p>
+        </div>
+    </footer>
+
+    <!-- Scripts Bootstrap et jQuery -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+</body>
 </html>
