--- a/templates/diop/cv.html.twig
+++ b/templates/diop/cv.html.twig
@@ -15,11 +15,18 @@
         padding: 20px;
         border-radius: 8px;
         margin-top: 20px;
+        color: #ffffff; /* Set text color for paragraphs */
+        
     }
 
     h1, h2, h3 {
 
         color: #007bff;
+    }
+     p {
+        font-size: 1.3rem;
+        line-height: 1.6;
+        color: #ffffff; /* Set text color for paragraphs */
     }
 
     hr {
