--- a/templates/diop/portfolio.html.twig
+++ b/templates/diop/portfolio.html.twig
@@ -7,6 +7,7 @@
     body {
         font-family: 'Arial', sans-serif;
         background-color: #050b17;
+        color: #ffffff; /* Set text color for the entire body */
     }
 
     .container {
@@ -33,6 +34,7 @@
     p {
         font-size: 1.3rem;
         line-height: 1.6;
+        color: #ffffff; /* Set text color for paragraphs */
     }
 
     a {
@@ -68,30 +70,26 @@
     <div class="skill-card">
         <h3>Administrer les réseaux et l’Internet</h3>
         
-            <p>Configurer les fonctions de base du réseau local :Adresse IPV4</p>
-            <p>Identifier les dysfonctionnements du réseau local</p>
-           <p> Configuration administration SWITCH</p>
-           <p> Configuration des Vlan<p> 
-            <p>Installer un poste client</p>
-            <p>Maîtriser les rôles et les principes fondamentaux des systèmes d’exploitation afin d’interagir avec ceux-ci pour la configuration et administration des réseaux et services fournis</p>
-       <p> Lois en Électricité</p>
+        <p>Configurer les fonctions de base du réseau local :Adresse IPV4</p>
+        <p>Identifier les dysfonctionnements du réseau local</p>
+        <p> Configuration administration SWITCH</p>
+        <p> Configuration des Vlan<p> 
+        <p>Installer un poste client</p>
+        <p>Maîtriser les rôles et les principes fondamentaux des systèmes d’exploitation afin d’interagir avec ceux-ci pour la configuration et administration des réseaux et services fournis</p>
+        <p> Lois en Électricité</p>
     </div>
 
     <div class="skill-card">
         <h3>Connecter les entreprises et les usagers</h3>
-        <p>
-        Mesures d'Amplitude, de Période, de Déphasage de Signaux
-        </p>
-       <p> Cablâge</p>
-       <p> Étude de Fonctions</p>
-       <p>les calculs et équations avec exp, ln, puissances sont maitrisés, ainsi que les applications classiques (dB, logarithme décimal)</p>
+        <p>Mesures d'Amplitude, de Période, de Déphasage de Signaux</p>
+        <p> Cablâge</p>
+        <p> Étude de Fonctions</p>
+        <p>les calculs et équations avec exp, ln, puissances sont maitrisés, ainsi que les applications classiques (dB, logarithme décimal)</p>
     </div>
 
     <div class="skill-card">
         <h3>Créer des outils et applications informatiques pour les R&T</h3>
-        <p>
-            Utiliser un système informatique(maitrise des logiciels notepadd++ ,spyder )
-        </p>
+        <p>Utiliser un système informatique(maitrise des logiciels notepad++, spyder )</p>
         <p>Lire et exécuter un programme</p>
         <p>créer un programme  en python</p>
         <p>Résolution numérique d'une Équation</p>
