--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,7 +8,7 @@
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
-                  <link rel= "stylesheet" href="https://bootswatch.com/5/zephyr/bootstrap.min.css">
+                  <link rel= "stylesheet" href="https://bootswatch.com/5/zephyr/bootstrap.min.css" rel="stylesheet">
         {% endblock %}
 
         {% block javascripts %}
