--- a/templates/diop/accueil.html.twig
+++ b/templates/diop/accueil.html.twig
@@ -28,6 +28,7 @@
     p {
         font-size: 1.3rem;
         line-height: 1.6;
+        color: #ffffff; /* Set text color for paragraphs */
     }
 
     .btn-primary {
