--- a/templates/diop/A propos de moi.html.twig
+++ b/templates/diop/A propos de moi.html.twig
@@ -6,11 +6,11 @@
 <style>
     body {
         font-family: 'Arial', sans-serif;
-        background-color: #050b17;
+        background-image: url(./background.jpg);
     }
 
     .container {
-        background-color: #050b17;
+     background-image: url(./background.jpg);
         box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
         padding: 40px;
         border-radius: 12px;
@@ -32,14 +32,14 @@
     }
 
     .btn-primary {
-        background-color: #050b17;
+        background-image: url(./background.jpg);
         border-color: #007bff;
         font-size: 1.2rem;
         padding: 10px 20px;
     }
 
     .jumbotron {
-        background-color: #050b17;
+    background-image: url(./background.jpg);
         color: #ffffff;
         padding: 80px 20px;
         border-radius: 12px;
@@ -63,7 +63,7 @@
     }
 
     .hobbies-section h2 {
-        color: #050b17;
+        color: #007bff;
     }
 
     .hobbies-list {
@@ -114,8 +114,7 @@
         </ul>
     </div>
 
-    <button class="btn btn-primary" data-toggle="modal" data-target="#myModal">Discover More</button>
-
+    
     <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
