--- a/templates/diop/accueil.html.twig
+++ b/templates/diop/accueil.html.twig
@@ -6,11 +6,11 @@
 <style>
     body {
         font-family: 'Arial', sans-serif;
-        background-color: #050b17;
+        background-image: url(./background.jpg);
     }
 
     .container {
-        background-color: #050b17;
+        background-image: url(./background.jpg)
         box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
         padding: 40px;
         border-radius: 12px;
@@ -69,8 +69,7 @@
         <p>Throughout my academic journey, I have gained valuable insights into the ever-evolving world of networks and telecommunications. I am enthusiastic about applying my knowledge to real-world scenarios and making a positive impact.</p>
     </section>
 
-    <button class="btn btn-primary" data-toggle="modal" data-target="#myModal">Discover More</button>
-
+    
     <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
